:construction: Fixed Modal Bug on Mobile

--- a/src/components/LandingPage/landingpage.css
+++ b/src/components/LandingPage/landingpage.css
@@ -35,6 +35,7 @@
 
 .modal-100w {
     width: 100%;
+    margin: 0
 }
 
 .modal-header {
